corpus/basic-elements.txt
================================================================================
Paragraph.1
================================================================================
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)))

================================================================================
Paragraph.2 - Two paragraphs
================================================================================
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol))
      (blank_line)
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)))

================================================================================
Paragraph.3 - Hashtag, blank_line and paragraph
================================================================================
#tag param1 param2

Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.
--------------------------------------------------------------------------------

    (document
      (hashtag
        (token)
        (tag_name)
        (content
          (word)
          (number)
          (word)
          (number)))
      (blank_line)
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)))

================================================================================
Escaped character.1
================================================================================
\@tag[label] (word)
[foo]: https://
--------------------------------------------------------------------------------

    (document
      (paragraph
        (escaped_char
          (token)
          (character))
        (word)
        (symbol)
        (word)
        (symbol)
        (symbol)
        (word)
        (symbol))
      (reference_link_definition
        (token)
        (reference
          (word))
        (token)
        (target
          (raw_word))))

================================================================================
Escaped character.2
================================================================================
@tag[label] (word)
[foo]\: https://
--------------------------------------------------------------------------------

    (document
      (paragraph
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (label
            (word))
          (token))
        (symbol)
        (word)
        (symbol)
        (short_reference_link
          (token)
          (reference
            (word))
          (token))
        (escaped_char
          (token)
          (character))
        (word)
        (symbol)
        (symbol)
        (symbol)))

================================================================================
Force new line token.1
================================================================================
word~
word
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (force_new_line)
        (word)))

================================================================================
List.1 - Simple list
================================================================================
- item
- item
---
--------------------------------------------------------------------------------

    (document
      (list_block
        (list
          (list_item
            (token)
            (paragraph
              (word)
              ))
          (list_item
            (token)
            (paragraph
              (word))))
        (list_break)))

================================================================================
List.2a - Hashtag with immediate list
================================================================================
#tag :key value
- item
- item
---
--------------------------------------------------------------------------------

    (document
      (hashtag
        (token)
        (tag_name)
        (content
          (symbol)
          (word)
          (word)))
      (list_block
        (list
          
          (list_item
            (token)
            (paragraph
              (word)))
          (list_item
            (token)
            (paragraph
              (word))))
        (list_break)))

================================================================================
List.2b - Hashtag blank line and list
================================================================================
#tag :key value

- item
- item
---
--------------------------------------------------------------------------------

    (document
      (hashtag
        (token)
        (tag_name)
        (content
          (symbol)
          (word)
          (word)))
      (blank_line)
      (list_block
        (list
          (list_item
            (token)
            (paragraph
              (word))) (list_item
            (token)
            (paragraph
              (word))))
        (list_break)))

================================================================================
List.2c - Two hashtags, blank_line, hashtag and list
================================================================================
#tag :key value
#tag :key value

#tag :key value
- item
- item
---
--------------------------------------------------------------------------------

    (document
      (hashtag
        (token)
        (tag_name)
        (content
          (symbol)
          (word)
          (word)))
      (hashtag
        (token)
        (tag_name)
        (content
          (symbol)
          (word)
          (word)))
      (blank_line)
      (hashtag
        (token)
        (tag_name)
        (content
          (symbol)
          (word)
          (word)))
      (list_block
        (list
          (list_item
            (token)
            (paragraph
              (word)))
          (list_item
            (token)
            (paragraph
              (word))))
        (list_break)))

================================================================================
List.3 - Arbitrary indented list
================================================================================
         - item
      -- item
  --- item
     - item
      ---
--------------------------------------------------------------------------------

    (document
      (list_block
        (list
          (list_item
            (token)
            (paragraph
              (word))
            (list
              (list_item
                (token)
                (paragraph
                  (word))
                (list
                  (list_item
                    (token)
                    (paragraph
                      (word)))))))
          (list_item
            (token)
            (paragraph
              (word))))
        (list_break)))

================================================================================
List.4 - Checkbox
================================================================================
- [ ] item
-- [x] item
--- [!] item
- [-] item
---
--------------------------------------------------------------------------------

    (document
      (list_block
        (list
          (list_item
            (token)
            (checkbox)
            (paragraph
              (word))
            (list
              (list_item
                (token)
                (checkbox)
                (paragraph
                  (word))
                (list
                  (list_item
                    (token)
                    (checkbox)
                    (paragraph
                      (word)))))))
          (list_item
            (token)
            (checkbox)
            (paragraph
              (word))))
        (list_break)))

================================================================================
Definition.1 - The simplest case
================================================================================
: term : description :
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word))
        (token)
        (description
          (paragraph
            (word)))
        (token)))

================================================================================
Definition.2 - Two terms
================================================================================
: term :
: term :
description :
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word))
        (token)
        (token)
        (term
          (word))
        (token)
        (description
          (paragraph
            (word)))
        (token)))

================================================================================
Definition.3 - End token on new line
================================================================================
: term :
    description
:
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word))
        (token)
        (description
          (paragraph
            (word)))
        (token)))

================================================================================
Definition.4 - Multiline term
================================================================================
: term
  term :                Description. :
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word)
          (word))
        (token)
        (description
          (paragraph
            (word)
            (symbol)))
        (token)))

================================================================================
Definition.5 - Complex description with list
================================================================================
: term :
: term :                List:
                        - item
                        - item
                        ---
                        continue description. :
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word))
        (token)
        (token)
        (term
          (word))
        (token)
        (description
          (paragraph
            (word)
            (symbol))
          (list_block
            (list
              (list_item
                (token)
                (paragraph
                  (word)))
              (list_item
                (token)
                (paragraph
                  (word)
                  )))
            (list_break))
          (paragraph
            (word)
            (word)
            (symbol)))
        (token)))

================================================================================
Definition.6 - Complex description with list
================================================================================
: term :
: term :                Description:
                        @code lua
                        ...
                        @end
                        continue description. :
--------------------------------------------------------------------------------

    (document
      (definition
        (token)
        (term
          (word))
        (token)
        (token)
        (term
          (word))
        (token)
        (description
          (paragraph
            (word)
            (symbol))
          (tag
            (token)
            (tag_name
              (word))
            (tag_parameter)
            (content
              (raw_word))
            (end_tag))
          (paragraph
            (word)
            (word)
            (symbol)))
        (token)))

================================================================================
Link.1 - Link
================================================================================
[label](target)
--------------------------------------------------------------------------------

    (document
      (paragraph
        (link
          (token)
          (label
            (word))
          (token)
          (token)
          (target)
          (token))))

================================================================================
Link.2 - Reference link
================================================================================
[label][target]
--------------------------------------------------------------------------------

    (document
      (paragraph
        (reference_link
          (token)
          (label
            (word))
          (token)
          (token)
          (reference
            (word))
          (token))))

================================================================================
Link.3 - Short reference link
================================================================================
[label]
--------------------------------------------------------------------------------

    (document
      (paragraph
        (short_reference_link
          (token)
          (reference
            (word))
          (token))))

================================================================================
Link.4 - Short reference link and raw text
================================================================================
[label] (word)
--------------------------------------------------------------------------------

    (document
      (paragraph
        (short_reference_link
          (token)
          (reference
            (word))
          (token))
        (symbol)
        (word)
        (symbol)))

================================================================================
Link.5 - short reference link and continue text
================================================================================
(word) [label] (word)
--------------------------------------------------------------------------------

    (document
      (paragraph
        (symbol)
        (word)
        (symbol)
        (short_reference_link
          (token)
          (reference
            (word))
          (token))
        (symbol)
        (word)
        (symbol)))

================================================================================
Link.6 - Reference link and text
================================================================================
[label][target] (word)
--------------------------------------------------------------------------------

    (document
      (paragraph
        (reference_link
          (token)
          (label
            (word))
          (token)
          (token)
          (reference
            (word))
          (token))
        (symbol)
        (word)
        (symbol)))

================================================================================
Link.7 - Reference link definition
================================================================================
[ref]: https://url
--------------------------------------------------------------------------------

    (document
      (reference_link_definition
        (token)
        (reference
          (word))
        (token)
        (target
          (raw_word))))

================================================================================
Link.8a - Paragraph with reference link definition after
================================================================================
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.
[ref]: https://url
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol))
      (reference_link_definition
        (token)
        (reference
          (word))
        (token)
        (target
          (raw_word))))

================================================================================
Link.8b - Paragraph with reference link definition after
================================================================================
text @tag[label] [ref] [label][ref] [label](link)
[ref]: https://url
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (label
            (word))
          (token))
        (short_reference_link
          (token)
          (reference
            (word))
          (token))
        (reference_link
          (token)
          (label
            (word))
          (token)
          (token)
          (reference
            (word))
          (token))
        (link
          (token)
          (label
            (word))
          (token)
          (token)
          (target)
          (token)))
      (reference_link_definition
        (token)
        (reference
          (word))
        (token)
        (target
          (raw_word))))

================================================================================
Link.8c - Paragraph with reference link definition after
================================================================================
[label](link) @tag[label] [ref] [label][ref]
[ref]: https://url
--------------------------------------------------------------------------------

    (document
      (paragraph
        (link
          (token)
          (label
            (word))
          (token)
          (token)
          (target)
          (token))
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (label
            (word))
          (token))
        (short_reference_link
          (token)
          (reference
            (word))
          (token))
        (reference_link
          (token)
          (label
            (word))
          (token)
          (token)
          (reference
            (word))
          (token)))
      (reference_link_definition
        (token)
        (reference
          (word))
        (token)
        (target
          (raw_word))))

================================================================================
Link.9 - Raw link
================================================================================
<https://github.com/shaunsingh/nord.nvim>
--------------------------------------------------------------------------------

    (document
      (paragraph
        (raw_link
          (token)
          (target)
          (token))))

================================================================================
Code block.1
================================================================================
```python
@njit(parallel=True)
def logistic_regression(Y, X, w, iterations):
    ...
    return w
```
--------------------------------------------------------------------------------

    (document
      (code_block
        (token)
        (tag_parameter)
        (content
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word)
          (raw_word))
        (token)))
