corpus/conflicts.txt
================================================================================
Conflict.1 - inline_tag with link
================================================================================
@tag(content) [label][link]
--------------------------------------------------------------------------------

    (document
      (paragraph
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (content
            (raw_word))
          (token))
        (link
          (token)
          (label)
          (token)
          (token)
          (target)
          (token))))

================================================================================
Conflict.2 - inline_tag with short_reference_link
================================================================================
 [link] @tag[label](content) [link]
--------------------------------------------------------------------------------

    (document
      (paragraph
        (short_link
          (token)
          (target)
          (token))
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (label
            (word))
          (token)
          (token)
          (content
            (raw_word))
          (token))
        (short_link
          (token)
          (target)
          (token))))

================================================================================
Conflict.3 - reference_link with inline_tag
================================================================================
 [label][ref] @tag[label](content){param = val}
--------------------------------------------------------------------------------

    (document
      (paragraph
        (link
          (token)
          (label)
          (token)
          (token)
          (target)
          (token))
        (inline_tag
          (token)
          (tag_name
            (word))
          (token)
          (label
            (word))
          (token)
          (token)
          (content
            (raw_word))
          (token)
          (token)
          (parameters
            (raw_word)
            (raw_word)
            (raw_word))
          (token))))

================================================================================
Conflict.4 List with links
================================================================================
- [label]
  [label][link]
  [foo]: https
---
--------------------------------------------------------------------------------

    (document
      (list_block
        (list
          (list_item
            (token)
            (paragraph
              (short_link
                (token)
                (target)
                (token))
              (link
                (token)
                (label)
                (token)
                (token)
                (target)
                (token)))
            (reference_link_definition
              (token)
              (label)
              (token)
              (target
                (raw_word)))))
        (list_break)))

================================================================================
Conflict.5 - Paragraph with link definition immediate after it.
================================================================================
Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint
consectetur cupidatat.
[ref]: https://url
--------------------------------------------------------------------------------

    (document
      (paragraph
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (symbol))
      (reference_link_definition
        (token)
        (label)
        (token)
        (target
          (raw_word))))
