corpus/tags.txt
================================================================================
Tag.1 - Verbatim tag
================================================================================
@tag
    text
@end
--------------------------------------------------------------------------------

    (document
      (tag
        (token)
        name: (tag_name
          (word))
        (new_line)
        (content
          (raw_word)
          (new_line))
        (end_tag)
        (eof)))

================================================================================
Tag.2 - Tag with syntax
================================================================================
@+tag
    text text

    text
@end
--------------------------------------------------------------------------------

    (document
      (tag
        (token)
        (tag_name
          (word))
        (new_line)
        (content
          (paragraph
            (word)
            (word)
            (new_line))
          (blank_line)
          (paragraph
            (word)
            (new_line)))
        (end_tag)
        (eof)))

================================================================================
Tag.3 - Nested tags
================================================================================
@tag
    @+nested_tag
        text
    @end
    @code lua
        local M = {}
        return M
    @end
@end
--------------------------------------------------------------------------------

    (document
      (tag
        (token)
        (tag_name
          (word))
        (new_line)
        (content
          (tag
            (token)
            (tag_name
              (word)
              (symbol)
              (word))
            (new_line)
            (content
              (paragraph
                (word)
                (new_line)))
            (end_tag)
            (new_line))
          (tag
            (token)
            (tag_name
              (word))
            (tag_parameter)
            (new_line)
            (content
              (raw_word)
              (raw_word)
              (raw_word)
              (raw_word)
              (new_line)
              (raw_word)
              (raw_word)
              (new_line))
            (end_tag)
            (new_line)))
        (end_tag)
        (eof)))

================================================================================
Tag.4 - Hashtags, verbatim tag and blank_line after
================================================================================
#propertie val
#propertie val
@footnote name
    text
@end

text
--------------------------------------------------------------------------------

    (document
      (hashtag
        (token)
        (tag_name)
        (content
          (word))
        (new_line))
      (hashtag
        (token)
        (tag_name)
        (content
          (word))
        (new_line))
      (tag
        (token)
        name: (tag_name
          (word))
        parameter: (tag_parameter)
        (new_line)
        (content
          (raw_word)
          (new_line))
        (end_tag)
        (new_line))
      (blank_line)
      (paragraph
        (word))
      (eof))

================================================================================
Tag.6 - Hashtags and verbatim tag
================================================================================
#propertie val

#propertie val
@footnote name
    text
@end
--------------------------------------------------------------------------------
